--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -14,7 +14,7 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
-client.urlPart=/faces/user/Login.xhtml
+client.urlPart=/faces/accueil.xhtml
 compile.jsps=false
 conf.dir=${source.root}/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.BootsFaces-OSP-0.8.1-dist.jar=/home/wassim/Downloads/BootsFaces-OSP-0.8.1-dist.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +46,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.primefaces.classpath}
+    ${libs.primefaces.classpath}:\
+    ${file.reference.BootsFaces-OSP-0.8.1-dist.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
