--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -8,6 +8,14 @@
         <filter-name>Authen</filter-name>
         <filter-class>com.lib.filter.Authentification</filter-class>
     </filter>
+    <filter>
+        <filter-name>UserFilter</filter-name>
+        <filter-class>com.lib.filter.UserFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>UserFilter</filter-name>
+        <url-pattern>/faces/user/*</url-pattern>
+    </filter-mapping>
     <filter-mapping>
         <filter-name>Authen</filter-name>
         <url-pattern>/faces/admin/*</url-pattern>
