--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.BootsFaces-OSP-0.8.1-dist.jar=/home/hidro/Desktop/BootsFaces-OSP-0.8.1-dist.jar
+file.reference.BootsFaces-OSP-0.8.1-dist.jar-1=/home/wassim/Downloads/BootsFaces-OSP-0.8.1-dist.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +47,7 @@ jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${libs.primefaces.classpath}:\
-    ${file.reference.BootsFaces-OSP-0.8.1-dist.jar}
+    ${file.reference.BootsFaces-OSP-0.8.1-dist.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
